--- a/build.properties
+++ b/build.properties
@@ -2,5 +2,6 @@ bin.includes = META-INF/,\
                .,\
                libgluegen-rt.jnilib,\
                libjogl_desktop.jnilib,\
+               libjogl_mobile.jnilib,\
                libnativewindow_awt.jnilib,\
                libnewt.jnilib
